# vettar_isaaclab

./: .gitignore  LICENSE  README.md
resources/policies/vettar_flat_2026-04-24_13-24-40/: README.md  agent.yaml  env.yaml  policy.onnx  policy.pt
resources/vettar_description/meshes/: base_link.STL  calf_B_L.STL  calf_B_R.STL  calf_F_L.STL  calf_F_R.STL  calf_ctrl_b_B_L.STL  calf_ctrl_b_B_R.STL  calf_ctrl_b_F_L.STL  calf_ctrl_b_F_R.STL  calf_ctrl_link_1_B_L.STL  calf_ctrl_link_1_B_R.STL  calf_ctrl_link_1_F_L.STL  calf_ctrl_link_1_F_R.STL  calf_ctrl_link_2_B_L.STL  calf_ctrl_link_2_B_R.STL  calf_ctrl_link_2_F_L.STL  calf_ctrl_link_2_F_R.STL  servo_arm_B_L.STL  servo_arm_B_R.STL  servo_arm_F_L.STL  servo_arm_F_R.STL  shoulder_B_L.STL  shoulder_B_R.STL  shoulder_F_L.STL  shoulder_F_R.STL  thighs_B_R.STL  thighs_F_L.STL  thighs_F_R.STL
resources/vettar_description/urdf/: vettar.urdf
resources/vettar_description/usd/: config.yaml  vettar.usd
scripts/: check_pose.py  inspect_usd.py  inspect_usd_axes.py  play.py  preview_pose.py  regen_usd.py  scale_mass.py  smoke_test.py  train.py
source/vettar/: pyproject.toml  setup.py
source/vettar/config/: extension.toml
source/vettar/vettar/: __init__.py
source/vettar/vettar/assets/: __init__.py  vettar.py
source/vettar/vettar/tasks/: __init__.py
source/vettar/vettar/tasks/direct/: __init__.py
source/vettar/vettar/tasks/direct/vettar_locomotion/: __init__.py  vettar_env.py  vettar_env_cfg.py
source/vettar/vettar/tasks/direct/vettar_locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
(+3 files in other folders)
